--- a/main.tex
+++ b/main.tex
@@ -57,11 +57,13 @@
 \DeclareMathOperator{\round}{round}
 
 \usepackage{import, multirow}
-\usepackage{tikz}
+\usepackage{pgf, tikz}
 \usetikzlibrary{matrix}
 \usetikzlibrary{positioning}
 \usetikzlibrary{automata}
 \usetikzlibrary{shapes}
+
+\usepackage{wrapfig}
 
 \newenvironment{kmatrix}[1][1.3cm]{
     \begin{tikzpicture}[node distance=0cm]
@@ -87,7 +89,10 @@
 \newcommand{\red}[1]{\textcolor{red}{\textbf{#1}}}
 \def\qm{?}
 
-
 \begin{document}
     \pagestyle{main}
+
+    Which of the graphs in the attached figure can be drawn without raising your pencil from the paper, and without drawing any line more than once? Why? For the graphs that can be drawn as described, state how many starting points are possible.
+
+    \input{texts/01}
 \end{document}
