--- a/texts/01.tex
+++ b/texts/01.tex
@@ -39,4 +39,4 @@ If we connect the two vertices with odd degree by an edge $e := x y$, we get an 
 
     Finally, by \cref{thm:euler-trail}, we can see that the graph in \cref{fig:graph-a} can be drawn without raising the pencil and without repeating any lines. This is because only $v_2$ and $v_3$ have odd degree ($\deg(v_2) = 3 = \deg(v_3)$).
 
-    Furthermore, considering the argument for \cref{thm:euler-trail}, we must start the drawing at one of the two odd vertices, $v2$ or $v_3$.
+    Furthermore, considering the argument for \cref{thm:euler-trail}, we must start the drawing at one of the two odd vertices, $v_2$ or $v_3$.
