--- a/texts/01.tex
+++ b/texts/01.tex
@@ -2,18 +2,7 @@
 
 \begin{wrapfigure}{l}{0.5\textwidth}
     \centering
-    \begin{tikzpicture}[draw=darkgray,text=darkgray, align=center, node distance=4cm]
-        \tikzstyle{every node}=[inner sep=0pt];
-
-        \node (v1) [label=above:{\Large $v_1$}] {};
-        \node (v2) [label=left:{\Large $v_2$}, below left of = v1] {};
-        \node (v3) [label=right:{\Large $v_3$}, below right of = v1] {};
-        \node (v4) [label=below:{\Large $v_4$}, below right of = v2] {};
-
-        \path (v1.center) edge (v2.center) edge (v3.center);
-        \path (v4.center) edge (v2.center) edge (v3.center);
-        \path (v2.center) edge (v3.center);
-    \end{tikzpicture}
+    \input{images/graph-a}
 
     \caption{Image \texttt{a.} from question with labelled nodes.}
     \label{fig:graph-a}
@@ -40,3 +29,5 @@ If we connect the two vertices with odd degree by an edge $e := x y$, we get an 
     Finally, by \cref{thm:euler-trail}, we can see that the graph in \cref{fig:graph-a} can be drawn without raising the pencil and without repeating any lines. This is because only $v_2$ and $v_3$ have odd degree ($\deg(v_2) = 3 = \deg(v_3)$).
 
     Furthermore, considering the argument for \cref{thm:euler-trail}, we must start the drawing at one of the two odd vertices, $v_2$ or $v_3$.
+
+~
