--- a/main.tex
+++ b/main.tex
@@ -64,6 +64,7 @@
 \usetikzlibrary{shapes}
 
 \usepackage{wrapfig}
+\usepackage{booktabs}
 
 \newenvironment{kmatrix}[1][1.3cm]{
     \begin{tikzpicture}[node distance=0cm]
@@ -97,4 +98,5 @@
     \input{texts/01}
     \input{texts/02}
     \input{texts/03}
+    \input{texts/04}
 \end{document}
