--- a/texts/01.tex
+++ b/texts/01.tex
@@ -24,7 +24,7 @@ If we connect the two vertices with odd degree by an edge $e := x y$, we get an 
     A connected graph has an Euler trail if and only if exactly zero or two vertices have odd degree.
 \end{proposition}
 
-\subsection{Answer}
+\subsection{Answer} \label{sec:graph-a}
 
     Finally, by \cref{thm:euler-trail}, we can see that the graph in \cref{fig:graph-a} can be drawn without raising the pencil and without repeating any lines. This is because only $v_2$ and $v_3$ have odd degree ($\deg(v_2) = 3 = \deg(v_3)$).
 
