--- a/texts/02.tex
+++ b/texts/02.tex
@@ -3,7 +3,7 @@
 \noindent
 \begin{minipage}[t]{0.49\textwidth}
 
-    For \cref{fig:graph-b}, we have nodes $v_1$, $v_2$, $v_3$ and $v_4$ with degree odd ($\deg(v_i) = 3$ for $i = 1$, $2$, $3$ and $4$), therefore the graph does \textbf{not} have an Euler trail and cannot be drawn without raising the pencil or repeating a line.
+    For \cref{fig:graph-b}, we have nodes $\hyperlink{fig:graph-b:v1}{v_1}$, $\hyperlink{fig:graph-b:v2}{v_2}$, $\hyperlink{fig:graph-b:v3}{v_3}$ and $\hyperlink{fig:graph-b:v4}{v_4}$ with degree odd ($\deg(v_i) = 3$ for $i = \hyperlink{fig:graph-b:v1}{1}$, $\hyperlink{fig:graph-b:v2}{2}$, $\hyperlink{fig:graph-b:v3}{3}$ and $\hyperlink{fig:graph-b:v4}{4}$), therefore the graph does \textbf{not} have an Euler trail and cannot be drawn without raising the pencil or repeating a line.
 
 \end{minipage}%
 \begin{minipage}[t]{0.5\textwidth}
