--- a/texts/03.tex
+++ b/texts/03.tex
@@ -14,7 +14,7 @@
 \end{minipage}%
 \begin{minipage}[t]{0.39\textwidth}
 
-    Note that every outer vertex here ($v_1, \ldots, v_6$) has degree 2 and every inner node ($v_7, \ldots, v_{12}$) has degree 4 therefore, by \nameref{thm:euler-circuit}, there is an Euler circuit and the graph can be drawn as described.
+    Note that every outer vertex here ($\hyperlink{fig:graph-c:v1}{v_1}, \ldots, \hyperlink{fig:graph-c:v6}{v_6}$) has degree 2 and every inner node ($\hyperlink{fig:graph-c:v7}{v_7}, \ldots, \hyperlink{fig:graph-c:v12}{v_{12}}$) has degree 4 therefore, by \nameref{thm:euler-circuit}, there is an Euler circuit and the graph can be drawn as described.
 
     ~
 
