--- a/texts/04.tex
+++ b/texts/04.tex
@@ -10,12 +10,12 @@
         \toprule
             Vertex & Degree & Is Odd? \\
         \midrule
-            $v_1$ & 2 & --- \\
-            $v_2$ & 2 & --- \\
-            $v_3$ & 6 & --- \\
-            $v_4$ & 6 & --- \\
-            $v_5$ & 3 & Yes \\
-            $v_6$ & 1 & Yes \\
+            $\hyperlink{fig:graph-d:v1}{v_1}$ & 2 & --- \\
+            $\hyperlink{fig:graph-d:v2}{v_2}$ & 2 & --- \\
+            $\hyperlink{fig:graph-d:v3}{v_3}$ & 6 & --- \\
+            $\hyperlink{fig:graph-d:v4}{v_4}$ & 6 & --- \\
+            $\hyperlink{fig:graph-d:v5}{v_5}$ & 3 & Yes \\
+            $\hyperlink{fig:graph-d:v6}{v_6}$ & 1 & Yes \\
         \bottomrule
         \bottomrule
     \end{tabular}
@@ -29,4 +29,4 @@
     \label{fig:graph-d}
 \end{wrapfigure}
 
-Just like with \hyperref[sec:graph-a]{image (a)}, we have exactly two odd vertices, $v_5$ and $v_6$, in this case. By \cref{thm:euler-trail}, this proves the graph can be drawn as required. As before, both vertices can be used as the starting point for the drawing.
+Just like with \hyperref[sec:graph-a]{image (a)}, we have exactly two odd vertices, $\hyperlink{fig:graph-d:v5}{v_5}$ and $\hyperlink{fig:graph-d:v6}{v_6}$, in this case. By \cref{thm:euler-trail}, this proves the graph can be drawn as required. As before, both vertices can be used as the starting point for the drawing.
